--- a/git-mesa/suite/bullseye/debian/control
+++ b/git-mesa/suite/bullseye/debian/control
@@ -2,31 +2,26 @@ Source: mesa
 Section: graphics
 Priority: optional
 Maintainer: Debian X Strike Force <debian-x@lists.debian.org>
-Uploaders: Andreas Boll <andreas.boll.dev@gmail.com>
-Standards-Version: 4.0.0
+Uploaders: Andreas Boll <aboll@debian.org>
+Standards-Version: 4.1.4
 Build-Depends:
- debhelper (>= 9),
- dh-autoreconf,
- quilt (>= 0.40),
+ debhelper-compat (= 12),
+ directx-headers-dev [linux-amd64 linux-arm64],
+ glslang-tools [amd64 arm64 armel armhf i386 mips64el mipsel powerpc ppc64 ppc64el riscv64 s390x sparc64 x32],
+ meson (>= 0.45),
+ quilt (>= 0.63-8.2~),
  pkg-config,
- libdrm-dev (>= 2.4.82) [!hurd-any],
+ libdrm-dev (>= 2.4.107-4),
  libx11-dev,
- x11proto-gl-dev (>= 1.4.14),
  libxxf86vm-dev,
  libexpat1-dev,
- libsensors4-dev [!hurd-any],
+ libsensors-dev [!hurd-any],
  libxfixes-dev,
- libxdamage-dev,
  libxext-dev,
- libva-dev (>= 1.6.0) [linux-any kfreebsd-any],
+ libva-dev (>= 1.6.0) [linux-any kfreebsd-any] <!pkg.mesa.nolibva>,
  libvdpau-dev (>= 1.1.1) [linux-any kfreebsd-any],
- libvulkan-dev [amd64 arm64 armel armhf i386 mips mips64el mipsel powerpc ppc64 ppc64el sparc64 x32],
- autoconf,
- automake,
- libtool,
- x11proto-dri2-dev (>= 2.6),
- x11proto-dri3-dev (>= 1.0),
- x11proto-present-dev (>= 1.0),
+ libvulkan-dev [amd64 arm64 armel armhf i386 mips64el mipsel powerpc ppc64 ppc64el riscv64 s390x sparc64 x32],
+ x11proto-dev,
  linux-libc-dev (>= 2.6.31) [linux-any],
  libx11-xcb-dev,
  libxcb-dri2-0-dev (>= 1.8),
@@ -35,26 +30,34 @@ Build-Depends:
  libxcb-dri3-dev,
  libxcb-present-dev,
  libxcb-randr0-dev,
+ libxcb-shm0-dev,
  libxcb-sync-dev,
+ libxrandr-dev,
  libxshmfence-dev (>= 1.1),
- python,
- python-mako,
+ libzstd-dev,
+ python3,
+ python3-mako,
+ python3-setuptools,
  flex,
  bison,
- llvm-4.0-dev (>= 1:4.0~) [amd64 arm64 armel armhf i386 kfreebsd-amd64 kfreebsd-i386 mips mips64el mipsel powerpc ppc64 sparc64 ppc64el],
- libelf-dev [amd64 arm64 armel armhf i386 kfreebsd-amd64 kfreebsd-i386 mips mips64el mipsel powerpc ppc64 sparc64 ppc64el],
- libwayland-dev (>= 1.11.0) [linux-any],
- libclang-4.0-dev (>= 1:4.0~) [amd64 arm64 armel armhf i386 kfreebsd-amd64 kfreebsd-i386 mips mips64el mipsel powerpc ppc64 sparc64 ppc64el],
- libclc-dev (>= 0.2.0+git20170213) [amd64 arm64 armel armhf i386 kfreebsd-amd64 kfreebsd-i386 mips mips64el mipsel powerpc ppc64 sparc64 ppc64el],
+ libelf-dev [amd64 arm64 armel armhf i386 kfreebsd-amd64 kfreebsd-i386 mips64el mipsel powerpc ppc64 ppc64el riscv64 s390x sparc64],
+ libwayland-dev (>= 1.15.0) [linux-any],
+ libwayland-egl-backend-dev (>= 1.15.0) [linux-any],
+ llvm-13-dev [amd64 arm64 armel armhf i386 mips64el mipsel powerpc ppc64 ppc64el s390x sparc64],
+ libclang-13-dev [amd64 arm64 armel armhf i386 mips64el mipsel powerpc ppc64 ppc64el s390x sparc64],
+ libclang-cpp13-dev [amd64 arm64 armel armhf i386 mips64el mipsel powerpc ppc64 ppc64el s390x sparc64],
+ libclc-13-dev [amd64 arm64 armel armhf i386 mips64el mipsel powerpc ppc64 ppc64el s390x sparc64],
  wayland-protocols (>= 1.9),
  zlib1g-dev,
-Vcs-Git: https://anonscm.debian.org/git/pkg-xorg/lib/mesa.git
-Vcs-Browser: https://anonscm.debian.org/cgit/pkg-xorg/lib/mesa.git
+ libglvnd-core-dev (>= 1.3.2),
+ valgrind [amd64 arm64 armhf i386 mips64el mipsel powerpc ppc64 ppc64el s390x],
+Vcs-Git: https://salsa.debian.org/xorg-team/lib/mesa.git
+Vcs-Browser: https://salsa.debian.org/xorg-team/lib/mesa
 Homepage: https://mesa3d.org/
 
 Package: libxatracker2
 Section: libs
-Architecture: linux-any 
+Architecture: amd64 i386 x32
 Depends:
  ${shlibs:Depends},
  ${misc:Depends},
@@ -68,7 +71,7 @@ Description: X acceleration library -- runtime
 
 Package: libxatracker-dev
 Section: libdevel
-Architecture: linux-any
+Architecture: amd64 i386 x32
 Depends:
  libxatracker2 (= ${binary:Version}),
  ${misc:Depends},
@@ -81,6 +84,36 @@ Description: X acceleration library -- development files
  .
  This package provides the development environment for compiling programs
  against the xatracker library.
+
+Package: libd3dadapter9-mesa
+Section: libs
+Architecture: amd64 arm64 armel armhf i386 powerpc
+Depends:
+ ${shlibs:Depends},
+ ${misc:Depends},
+ libudev1 [linux-any],
+Pre-Depends: ${misc:Pre-Depends}
+Multi-Arch: same
+Description: state-tracker for Direct3D9
+ This package contains a Gallium3D state tracker that implements the Direct3D9
+ API.  Combined with the gallium-nine branch of Wine, programs using D3D9 can
+ achieve native (or better) graphics performance.
+
+Package: libd3dadapter9-mesa-dev
+Section: libdevel
+Architecture: amd64 arm64 armel armhf i386 powerpc
+Depends:
+ libd3dadapter9-mesa (= ${binary:Version}),
+ libudev1 [linux-any],
+ ${misc:Depends},
+Pre-Depends: ${misc:Pre-Depends}
+Multi-Arch: same
+Description: state-tracker for Direct3D9 -- development files
+ This package contains a Gallium3D state tracker that implements the Direct3D9
+ API.  Combined with the gallium-nine branch of Wine, programs using D3D9 can
+ achieve native (or better) graphics performance.
+ .
+ Development files
 
 Package: libgbm1
 Section: libs
@@ -112,48 +145,39 @@ Description: generic buffer management API -- development files
  This package provides the development environment for compiling programs
  against the GBM library.
 
-Package: libegl1-mesa
+Package: libegl-mesa0
 Section: libs
 Architecture: any
 Depends:
  ${shlibs:Depends},
  ${misc:Depends},
  libgbm1 (= ${binary:Version}) [!hurd-any],
-Provides: libegl1-x11
-Conflicts: libegl1-x11
-Replaces: libegl1-x11
+Provides: libegl-vendor
 Pre-Depends: ${misc:Pre-Depends}
 Multi-Arch: same
-Description: free implementation of the EGL API -- runtime
+Description: free implementation of the EGL API -- Mesa vendor library
  This package contains the EGL native platform graphics interface library.
  EGL provides a platform-agnostic mechanism for creating rendering surfaces
  for use with other graphics libraries, such as OpenGL|ES.
  .
- This package contains modules to interface with the existing system GLX or
- DRI2 drivers to provide OpenGL via EGL.
+ This package contains the Mesa vendor library for EGL.
+
+Package: libegl1-mesa
+Section: oldlibs
+Architecture: any
+Depends:
+ libegl1,
+ ${misc:Depends},
+Multi-Arch: same
+Description: transitional dummy package
+ This is a transitional dummy package, it can be safely removed.
 
 Package: libegl1-mesa-dev
 Section: libdevel
 Architecture: any
 Depends:
- libegl1-mesa (= ${binary:Version}),
- libwayland-egl1-mesa (= ${binary:Version}) [linux-any],
- libdrm-dev (>= 2.4.74) [!hurd-any],
- x11proto-dri2-dev (>= 2.6),
- x11proto-gl-dev (>= 1.4.14),
- libx11-dev,
- libxext-dev,
- libxxf86vm-dev,
- libxdamage-dev,
- libxfixes-dev,
- libxcb-glx0-dev,
- libxcb-dri2-0-dev,
- libxcb-dri3-dev,
- libxcb-present-dev,
- libxcb-sync-dev,
- libxshmfence-dev,
- libx11-xcb-dev,
- libwayland-dev (>= 1.11.0) [linux-any],
+ libegl-dev,
+ libglvnd-dev,
  ${misc:Depends},
 Multi-Arch: same
 Description: free implementation of the EGL API -- development files
@@ -166,60 +190,37 @@ Description: free implementation of the EGL API -- development files
  against the EGL library.
 
 Package: libwayland-egl1-mesa
-Section: libs
+Section: oldlibs
 Architecture: linux-any
 Depends:
- ${shlibs:Depends},
  ${misc:Depends},
- libegl1-mesa (= ${binary:Version})
-Provides: libwayland-egl1
-Conflicts: libwayland-egl1
-Replaces: libwayland-egl1
+ libegl1,
+ libwayland-egl1,
 Pre-Depends: ${misc:Pre-Depends}
 Multi-Arch: same
-Description: implementation of the Wayland EGL platform -- runtime
- This package contains the mesa implementation of the Wayland EGL platform
+Description: transitional dummy package
+ This is a transitional dummy package, it can be safely removed.
 
 Package: libgles2-mesa
-Section: libs
+Section: oldlibs
 Architecture: any
 Depends:
- libglapi-mesa (= ${binary:Version}),
- ${shlibs:Depends},
+ libgles2,
  ${misc:Depends},
-Provides: libgles2
-Conflicts: libgles2
-Replaces: libgles2
-Pre-Depends: ${misc:Pre-Depends}
 Multi-Arch: same
-Description: free implementation of the OpenGL|ES 2.x API -- runtime
- OpenGL|ES is a cross-platform API for full-function 2D and 3D graphics on
- embedded systems - including consoles, phones, appliances and vehicles.
- It contains a subset of OpenGL plus a number of extensions for the
- special needs of embedded systems.
- .
- OpenGL|ES 2.x provides an API for programmable hardware including vertex
- and fragment shaders.
+Description: transitional dummy package
+ This is a transitional dummy package, it can be safely removed.
 
 Package: libgles2-mesa-dev
-Section: libdevel
+Section: oldlibs
 Architecture: any
 Depends:
- libgles2-mesa (= ${binary:Version}),
- libegl1-mesa-dev,
+ libgles-dev,
+ libglvnd-dev,
  ${misc:Depends},
 Multi-Arch: same
-Description: free implementation of the OpenGL|ES 2.x API -- development files
- OpenGL|ES is a cross-platform API for full-function 2D and 3D graphics on
- embedded systems - including consoles, phones, appliances and vehicles.
- It contains a subset of OpenGL plus a number of extensions for the
- special needs of embedded systems.
- .
- OpenGL|ES 2.x provides an API for programmable hardware including vertex
- and fragment shaders.
- .
- This package provides a development environment for building applications
- using the OpenGL|ES 2.x APIs.
+Description: transitional dummy package
+ This is a transitional dummy package, it can be safely removed.
 
 Package: libglapi-mesa
 Section: libs
@@ -234,22 +235,20 @@ Description: free implementation of the GL API -- shared library
  functions. It is intended to be mainly used by both the libgles1-mesa
  and libgles2-mesa packages.
 
-Package: libgl1-mesa-glx
+Package: libglx-mesa0
 Section: libs
 Architecture: any
 Depends:
  ${shlibs:Depends},
  ${misc:Depends},
- libglapi-mesa (= ${binary:Version}),
-Recommends: libgl1-mesa-dri
-Conflicts: libgl1
-Replaces: libgl1
-Provides: libgl1
+ libgl1-mesa-dri,
+Provides: libglx-vendor
 Breaks:
  libopengl-perl (<< 0.6704+dfsg-2),
+ glx-diversions (<< 0.8.4~),
 Pre-Depends: ${misc:Pre-Depends}
 Multi-Arch: same
-Description: free implementation of the OpenGL API -- GLX runtime
+Description: free implementation of the OpenGL API -- GLX vendor library
  Mesa is a 3-D graphics library with an API which is very similar to
  that of OpenGL.  To the extent that Mesa utilizes the OpenGL command
  syntax or state machine, it is being used with authorization from
@@ -264,6 +263,17 @@ Description: free implementation of the OpenGL API -- GLX runtime
  This package does not include the modules themselves: these can be found
  in the libgl1-mesa-dri package.
 
+Package: libgl1-mesa-glx
+Section: oldlibs
+Architecture: any
+Depends:
+ libgl1,
+ libglx-mesa0,
+ ${misc:Depends},
+Multi-Arch: same
+Description: transitional dummy package
+ This is a transitional dummy package, it can be safely removed.
+
 Package: libgl1-mesa-dri
 Section: libs
 Architecture: any
@@ -271,7 +281,6 @@ Pre-Depends: ${misc:Pre-Depends}
 Depends:
  ${shlibs:Depends},
  ${misc:Depends}
-Recommends: libtxc-dxtn-s2tc | libtxc-dxtn-s2tc0 | libtxc-dxtn0
 Multi-Arch: same
 Description: free implementation of the OpenGL API -- DRI modules
  This version of Mesa provides GLX and DRI capabilities: it is capable of
@@ -282,52 +291,30 @@ Description: free implementation of the OpenGL API -- DRI modules
  modules for accelerating direct rendering.
  .
  For a complete description of Mesa, please look at the
- libgl1-mesa-glx package.
+ libglx-mesa0 package.
 
 Package: libgl1-mesa-dev
-Section: libdevel
+Section: oldlibs
 Architecture: any
 Depends:
- mesa-common-dev (= ${binary:Version}),
- libgl1-mesa-glx (= ${binary:Version}),
- libdrm-dev (>= 2.4.74) [!hurd-any],
- libx11-dev,
- libx11-xcb-dev,
- libxcb-dri3-dev,
- libxcb-present-dev,
- libxcb-sync-dev,
- libxshmfence-dev,
- libxcb-dri2-0-dev,
- libxcb-glx0-dev,
- libxdamage-dev,
- libxext-dev,
- libxfixes-dev,
- libxxf86vm-dev,
- x11proto-dri2-dev (>= 2.6),
- x11proto-gl-dev (>= 1.4.14),
+ libgl-dev,
+ libglvnd-dev,
  ${misc:Depends},
-Conflicts: libgl-dev
-Replaces: libgl-dev
-Provides: libgl-dev
 Multi-Arch: same
-Description: free implementation of the OpenGL API -- GLX development files
- This version of Mesa provides GLX and DRI capabilities: it is capable of
- both direct and indirect rendering.  For direct rendering, it can use DRI
- modules from the libgl1-mesa-dri package to accelerate drawing.
- .
- This package includes headers and static libraries for compiling
- programs with Mesa.
- .
- For a complete description of Mesa, please look at the libgl1-mesa-glx
- package.
+Description: transitional dummy package
+ This is a transitional dummy package, it can be safely removed.
 
 Package: mesa-common-dev
 Section: libdevel
 Architecture: any
 Depends:
+ libgl-dev,
+ libglx-dev,
  libx11-dev,
- libdrm-dev (>= 2.4.65) [!hurd-any],
+ libdrm-dev (>= 2.4.95) [!hurd-any],
  ${misc:Depends},
+Breaks: libegl1-mesa-dev (<< 18.2.5-2)
+Replaces: libegl1-mesa-dev (<< 18.2.5-2)
 Multi-Arch: same
 Description: Developer documentation for Mesa
  This package includes the specifications for the Mesa-specific OpenGL
@@ -340,7 +327,6 @@ Architecture: any
 Depends:
  ${shlibs:Depends},
  ${misc:Depends},
- libglapi-mesa (= ${binary:Version}),
 Pre-Depends: ${misc:Pre-Depends}
 Multi-Arch: same
 Description: Mesa Off-screen rendering extension
@@ -371,12 +357,12 @@ Description: Mesa Off-screen rendering extension -- development files
 Package: mesa-va-drivers
 Section: libs
 Architecture: linux-any kfreebsd-any
+Build-Profiles: <!pkg.mesa.nolibva>
 Depends:
- libva1,
  ${shlibs:Depends},
  ${misc:Depends},
 Enhances:
- libva1,
+ libva2,
 Provides:
  va-driver,
 Breaks: vdpau-va-driver (<< 0.7.4-5)
@@ -412,12 +398,13 @@ Description: Mesa VDPAU video acceleration drivers
 
 Package: mesa-vulkan-drivers
 Section: libs
-Architecture: amd64 arm64 armel armhf i386 mips mips64el mipsel powerpc ppc64 ppc64el sparc64 x32
+Architecture: amd64 arm64 armel armhf i386 mips64el mipsel powerpc ppc64 ppc64el s390x sparc64 x32
 Pre-Depends: ${misc:Pre-Depends}
 Depends:
  libvulkan1,
  ${shlibs:Depends},
  ${misc:Depends}
+Provides: vulkan-icd
 Multi-Arch: same
 Description: Mesa Vulkan graphics drivers
  Vulkan is a low-overhead 3D graphics and compute API. This package
@@ -425,11 +412,10 @@ Description: Mesa Vulkan graphics drivers
 
 Package: mesa-opencl-icd
 Section: libs
-Architecture: amd64 arm64 armel armhf i386 kfreebsd-amd64 kfreebsd-i386 mips mips64el mipsel powerpc ppc64 sparc64 ppc64el
+Architecture: amd64 arm64 armel armhf i386 mips64el mipsel powerpc ppc64 ppc64el s390x sparc64
 Pre-Depends: ${misc:Pre-Depends}
 Depends:
- libclc-r600 (>= 0.2.0+git20170213),
- libclc-amdgcn (>= 0.2.0+git20170213),
+ libclc-13,
  ocl-icd-libopencl1 | libopencl1,
  ${shlibs:Depends},
  ${misc:Depends},
