--- a/git-mesa/suite/bullseye/debian/rules
+++ b/git-mesa/suite/bullseye/debian/rules
@@ -5,138 +5,171 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
+include /usr/share/dpkg/pkg-info.mk
+
 DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 DEB_HOST_ARCH      ?= $(shell dpkg-architecture -qDEB_HOST_ARCH)
 DEB_HOST_ARCH_OS   ?= $(shell dpkg-architecture -qDEB_HOST_ARCH_OS)
 DEB_HOST_ARCH_CPU  ?= $(shell dpkg-architecture -qDEB_HOST_ARCH_CPU)
 
-ifeq (,$(filter $(DEB_HOST_ARCH), armhf))
+# for finding the correct llvm-config when meson doesn't know about it yet
+export PATH:=/usr/lib/llvm-13/bin/:$(PATH)
+
+export DEB_BUILD_MAINT_OPTIONS=optimize=-lto
+
+ifeq (,$(filter $(DEB_HOST_ARCH), armhf ppc64el sh3 sh4))
 buildflags = \
 	$(shell DEB_CFLAGS_MAINT_APPEND=-Wall DEB_CXXFLAGS_MAINT_APPEND=-Wall dpkg-buildflags --export=configure)
 else
-# Workaround for a variant of LP: #725126
-buildflags = \
+  ifneq (,$(filter $(DEB_HOST_ARCH), armhf))
+  # Workaround for a variant of LP: #725126
+  buildflags = \
 	$(shell DEB_CFLAGS_MAINT_APPEND="-Wall -fno-optimize-sibling-calls" DEB_CXXFLAGS_MAINT_APPEND="-Wall -fno-optimize-sibling-calls" dpkg-buildflags --export=configure)
+  else
+    ifneq (,$(filter $(DEB_HOST_ARCH), ppc64el))
+    # Workaround for https://gitlab.freedesktop.org/mesa/mesa/-/issues/5315
+    buildflags = \
+	$(shell DEB_CFLAGS_MAINT_APPEND="-Wall -O2" DEB_CXXFLAGS_MAINT_APPEND="-Wall -O2" dpkg-buildflags --export=configure)
+    else
+    # Workaround for https://gcc.gnu.org/bugzilla/show_bug.cgi?id=83143
+    buildflags = \
+	$(shell DEB_CFLAGS_MAINT_APPEND="-Wall -O1" DEB_CXXFLAGS_MAINT_APPEND="-Wall -O1" dpkg-buildflags --export=configure)
+    endif
+  endif
 endif
 
-# keep a list of files we don't install (yet), but since it's a bit
-# large, use an external file:
-include debian/not-installed
-
-DRI_DRIVERS =
-GALLIUM_DRIVERS =
+EGL_PLATFORMS = x11
+GALLIUM_DRIVERS = swrast
 VULKAN_DRIVERS =
-EGL_PLATFORMS = x11,surfaceless
 
-confflags_DRI3 = --disable-dri3
+confflags_DRI3 = -Ddri3=disabled
+confflags_OSMESA =  -Dosmesa=true
+confflags_SSE2 = -Dsse2=true
 
 # hurd doesn't do direct rendering
 ifeq ($(DEB_HOST_ARCH_OS), hurd)
-	confflags_DIRECT_RENDERING = --disable-driglx-direct
-	confflags_GBM = --disable-gbm
-	DRI_DRIVERS = swrast
+	confflags_DIRECT_RENDERING = -Dglx-direct=false
+	confflags_GBM = -Dgbm=disabled
 else
+	GALLIUM_DRIVERS += r300 r600
+
+	confflags_DIRECT_RENDERING = -Dglx-direct=true
+	confflags_GBM = -Dgbm=enabled
+	confflags_GALLIUM += -Dgallium-extra-hud=true
+	confflags_GALLIUM += -Dgallium-vdpau=enabled
+	confflags_GALLIUM += -Dlmsensors=enabled
+
+  # radv/lavapipe needs LLVM and the Vulkan loader, so only build on the subset of
+  # arches where we have LLVM enabled and where the Vulkan loader is built.
+  ifneq (,$(filter $(DEB_HOST_ARCH), amd64 arm64 armel armhf i386 mips64el mipsel powerpc ppc64 ppc64el s390x sparc64))
+	VULKAN_DRIVERS += amd swrast
+  endif
+
   ifeq ($(DEB_HOST_ARCH_OS), linux)
-	confflags_DRI3 = --enable-dri3
+	confflags_DRI3 = -Ddri3=enabled
 	# Gallium drivers which require kernel support, not yet ported to non-Linux
-	GALLIUM_DRIVERS += nouveau svga virgl
+	GALLIUM_DRIVERS += nouveau virgl
 
 	# Freedreno requires arm in addition
 	ifneq (,$(filter arm arm64,$(DEB_HOST_ARCH_CPU)))
 		GALLIUM_DRIVERS += freedreno
 	endif
 
-	# vc4 kernel support is only available on armhf and arm64
+	# etnaviv, kmsro, tegra, vc4 and v3d kernel support are only available on armhf and arm64
 	ifneq (,$(filter $(DEB_HOST_ARCH), armhf arm64))
-		GALLIUM_DRIVERS += vc4
+		GALLIUM_DRIVERS += etnaviv kmsro lima panfrost tegra vc4 v3d
+		VULKAN_DRIVERS += broadcom freedreno
 	endif
 
-	# etnaviv kernel support is currently only available on armhf
-	ifneq (,$(filter $(DEB_HOST_ARCH), armhf))
-		GALLIUM_DRIVERS += etnaviv imx
+	ifneq (,$(filter $(DEB_HOST_ARCH), amd64 i386 x32))
+		GALLIUM_DRIVERS += svga
+		# svga needs xa state tracker
+		confflags_GALLIUM += -Dgallium-xa=enabled
+		VULKAN_DRIVERS += intel
 	endif
 
-	# svga needs xa state tracker
-	confflags_GALLIUM += --enable-xa
+	# Non-Linux ports lack epoll, so wayland isn't ready yet:
+	# https://gitlab.freedesktop.org/wayland/wayland/-/issues/72
+	# hurd also lacks *_CLOEXEC
+	EGL_PLATFORMS += ,wayland
 
-# Non-Linux ports also lack *_CLOEXEC and epoll, so wayland isn't ready yet:
-	EGL_PLATFORMS += wayland
-    ifeq (,$(filter $(DEB_HOST_ARCH), s390 s390x))
-	DRI_DRIVERS += nouveau
-    endif
-    ifneq (,$(filter $(DEB_HOST_ARCH), amd64 i386 x32))
-	VULKAN_DRIVERS += intel
-    endif
+	ifneq (,$(filter $(DEB_HOST_ARCH), amd64 arm64 armhf i386 mips64el mipsel powerpc ppc64 ppc64el s390x))
+		confflags_VALGRIND += -Dvalgrind=enabled
+	endif
+
+	# WSL supports only amd64 and arm64
+	ifneq (,$(filter amd64 arm64,$(DEB_HOST_ARCH)))
+		GALLIUM_DRIVERS += d3d12
+	endif
   endif
-
-	EGL_PLATFORMS += drm
 
   # Build intel drivers on archs where libdrm-intel is installed
   ifneq (,$(filter $(DEB_HOST_ARCH),amd64 i386 kfreebsd-amd64 kfreebsd-i386 x32))
-	DRI_DRIVERS += i915 i965
-  endif
-
-  ifeq (,$(filter $(DEB_HOST_ARCH), s390 s390x))
-    DRI_DRIVERS += r200 radeon
-    GALLIUM_DRIVERS += r600 r300
+	GALLIUM_DRIVERS += iris crocus
   endif
 
   # LLVM is required for building r300g, radeonsi and llvmpipe drivers.
   # It's also required for building OpenCL support.
-  ifneq (,$(filter $(DEB_HOST_ARCH), amd64 arm64 armel armhf i386 kfreebsd-amd64 kfreebsd-i386 mips mips64el mipsel powerpc ppc64 sparc64 ppc64el))
+  ifneq (,$(filter $(DEB_HOST_ARCH), amd64 arm64 armel armhf i386 mips64el mipsel powerpc ppc64 ppc64el s390x sparc64))
 	GALLIUM_DRIVERS += radeonsi
-	confflags_GALLIUM += --enable-gallium-llvm
-	confflags_GALLIUM += --enable-opencl --enable-opencl-icd
-	confflags_GALLIUM += ac_cv_path_LLVM_CONFIG=llvm-config-4.0
-	GALLIUM_DRIVERS += swrast
+	confflags_GALLIUM += -Dllvm=enabled
+	confflags_GALLIUM += -Dgallium-opencl=icd
+
+	# nine makes sense only on archs that build wine
+	ifneq (,$(filter $(DEB_HOST_ARCH), amd64 arm64 armel armhf i386 powerpc))
+		confflags_GALLIUM += -Dgallium-nine=true
+	endif
   else
-	DRI_DRIVERS += swrast
-	confflags_GALLIUM += --disable-gallium-llvm
+	confflags_GALLIUM += -Dllvm=disabled
   endif
 
-  # radv needs LLVM and the Vulkan loader, so only build on the subset of
-  # arches where we have LLVM enabled and where the Vulkan loader is built.
-  ifneq (,$(filter $(DEB_HOST_ARCH), amd64 arm64 armel armhf i386 mips mips64el mipsel powerpc ppc64 sparc64 ppc64el))
-	VULKAN_DRIVERS += radeon
+  # build vulkan layers where Vulkan loader is available
+  ifneq (,$(filter $(DEB_HOST_ARCH), amd64 arm64 armel armhf i386 mips64el mipsel powerpc ppc64 ppc64el riscv64 s390x sparc64 x32))
+	GALLIUM_DRIVERS += zink
+	confflags_VULKAN += -Dvulkan-layers="device-select, overlay"
   endif
 
-	confflags_DIRECT_RENDERING = --enable-driglx-direct
-	confflags_GBM = --enable-gbm
-	confflags_GALLIUM += --enable-vdpau
-	confflags_GALLIUM += --enable-va
-	confflags_GALLIUM += --enable-gallium-extra-hud
-	confflags_GALLIUM += --enable-lmsensors
+  ifeq (,$(filter pkg.mesa.nolibva,$(DEB_BUILD_PROFILES)))
+	confflags_GALLIUM += -Dgallium-va=enabled
+  endif
 endif
 
-# Disable assembly usage on x32 otherwise Mesa defaults to x86_64 assembly
-# which doesn't work on x32 (see #758094)
-ifneq (,$(filter $(DEB_HOST_ARCH), x32))
-	confflags += --disable-asm
+ifeq ($(DEB_HOST_ARCH), i386)
+	confflags_SSE2 = -Dsse2=false
 endif
 
-confflags_EGL = --with-platforms="$(EGL_PLATFORMS)"
-confflags_GLES = --disable-gles1 --enable-gles2
-confflags_GALLIUM += --with-gallium-drivers="$(GALLIUM_DRIVERS)"
+empty:=
+space := $(empty) $(empty)
+comma := ,
+GALLIUM_DRIVERS := $(patsubst %,'%',$(GALLIUM_DRIVERS))
+GALLIUM_DRIVERS_LIST := $(subst $(space),$(comma),$(GALLIUM_DRIVERS))
+VULKAN_DRIVERS := $(patsubst %,'%',$(VULKAN_DRIVERS))
+VULKAN_DRIVERS_LIST := $(subst $(space),$(comma),$(VULKAN_DRIVERS))
+
+confflags_EGL = -Dplatforms="$(EGL_PLATFORMS)"
+confflags_GLES = -Dgles1=disabled -Dgles2=enabled
+confflags_GALLIUM += -Dgallium-drivers="[$(GALLIUM_DRIVERS_LIST)]"
 
 confflags += \
-	--enable-dri \
-	--with-dri-drivers="$(DRI_DRIVERS)" \
-	--with-dri-driverdir=/usr/lib/$(DEB_HOST_MULTIARCH)/dri \
-	--with-dri-searchpath='/usr/lib/$(DEB_HOST_MULTIARCH)/dri:\$$$${ORIGIN}/dri:/usr/lib/dri' \
-	--with-vulkan-drivers="$(VULKAN_DRIVERS)" \
-	--enable-osmesa \
-	--enable-glx-tls \
-	--enable-shared-glapi \
-	--enable-texture-float \
-	--disable-xvmc \
-	--disable-omx \
+	-Ddri-drivers-path=/usr/lib/$(DEB_HOST_MULTIARCH)/dri \
+	-Ddri-search-path='/usr/lib/$(DEB_HOST_MULTIARCH)/dri:\$$$${ORIGIN}/dri:/usr/lib/dri' \
+	-Dvulkan-drivers="[$(VULKAN_DRIVERS_LIST)]" \
+	-Dglvnd=true \
+	-Dshared-glapi=enabled \
+	-Dgallium-xvmc=disabled \
+	-Dgallium-omx=disabled \
+	-Db_ndebug=true \
+	-Dbuild-tests=true \
 	$(confflags_DIRECT_RENDERING) \
 	$(confflags_GBM) \
 	$(confflags_DRI3) \
 	$(confflags_EGL) \
 	$(confflags_GALLIUM) \
 	$(confflags_GLES) \
-	$(buildflags)
+	$(confflags_OSMESA) \
+	$(confflags_SSE2) \
+	$(confflags_VALGRIND) \
+	$(confflags_VULKAN)
 
 override_dh_clean:
 	rm -rf .pc
@@ -145,15 +178,18 @@ override_dh_clean:
 	rm -rf $$(find -name Makefile.in)
 	rm -rf bin/install-sh bin/ltmain.sh
 	for file in debian/*.in; do rm -f $${file%%.in}; done
-	rm -f src/compiler/nir/*.pyc
-	rm -f src/mapi/glapi/gen/*.pyc
-	rm -f src/mesa/main/*.pyc
-	rm -f src/gallium/auxiliary/util/*.pyc
-
+	rm -rf src/amd/compiler/__pycache__/ src/amd/registers/__pycache__
+	rm -rf src/amd/vulkan/*.pyc src/amd/vulkan/__pycache__/
+	rm -rf src/compiler/nir/*.pyc src/compiler/nir/__pycache__/
+	rm -rf src/egl/generate/*.pyc src/egl/generate/__pycache__/
+	rm -rf src/gallium/auxiliary/util/*.pyc src/gallium/auxiliary/util/__pycache__/
+	rm -rf src/intel/vulkan/*.pyc src/intel/vulkan/__pycache__/
+	rm -rf src/mapi/glapi/gen/*.pyc src/mapi/glapi/gen/__pycache__/ src/mapi/new/__pycache__/
+	rm -rf src/mesa/main/*.pyc src/mesa/main/__pycache__/
 	dh_clean
 
 override_dh_auto_configure:
-	dh_auto_configure -- \
+	$(buildflags) dh_auto_configure -- \
 		$(confflags)
 
 override_dh_auto_install:
@@ -164,7 +200,10 @@ override_dh_auto_install:
 			$${file} > $${file%%.in}; \
 	done
 
+# some tests are expected to fail for now, drop this when upstream has
+# better cross-build testing in place and expected failures fixed
 override_dh_auto_test:
+	-dh_auto_test
 
 allpkg = $(shell dh_listpackages -a)
 
@@ -173,25 +212,19 @@ override_dh_installchangelogs:
 	dh_installchangelogs -pmesa-common-dev
 
 override_dh_install:
-	# Also get rid of other files which aren't installed. Do not
-	# use -f to ensure we notice disappearing files:
-	set -e; for file in $(NOT_INSTALLED); do rm debian/tmp/$$file; done
-	# Files only in git, not in tarballs, OK to use rm -f here:
-	set -e; for file in $(NOT_INSTALLED_EITHER); do rm -f debian/tmp/$$file; done
 	# purge .la files
 	find debian/tmp/ -name '*.la' -exec rm '{}' ';'
+
+	# Get rid of some files which aren't installed. Do not
+	# use -f to ensure we notice disappearing files:
+	rm debian/tmp/usr/lib/*/libglapi.so
+	rm debian/tmp/usr/lib/*/libEGL_mesa.so
+	rm debian/tmp/usr/lib/*/libGLX_mesa.so
 
 	# Copy the hardlinked *_dri.so correctly.
 	install -m755 -d debian/libgl1-mesa-dri/usr/lib/${DEB_HOST_MULTIARCH}/dri/
 	mv debian/tmp/usr/lib/${DEB_HOST_MULTIARCH}/dri/*_dri.so \
 	   debian/libgl1-mesa-dri/usr/lib/${DEB_HOST_MULTIARCH}/dri/
-
-  # Remove vulkan headers only where they get installed in tmp
-  # We ship those headers via src:vulkan / libvulkan-dev
-  ifneq (,$(filter $(DEB_HOST_ARCH),amd64 i386 x32))
-	rm debian/tmp/usr/include/vulkan/vulkan_intel.h
-	rmdir debian/tmp/usr/include/vulkan
-  endif
 
   ifneq ($(DEB_HOST_ARCH_OS), hurd)
 	# Copy the hardlinked vdpau drivers correctly.
@@ -199,13 +232,15 @@ override_dh_install:
 	mv debian/tmp/usr/lib/${DEB_HOST_MULTIARCH}/vdpau/libvdpau*.so* \
 	   debian/mesa-vdpau-drivers/usr/lib/${DEB_HOST_MULTIARCH}/vdpau/
 
+    ifeq (,$(filter pkg.mesa.nolibva,$(DEB_BUILD_PROFILES)))
 	# Copy the hardlinked va drivers correctly.
 	install -m755 -d debian/mesa-va-drivers/usr/lib/${DEB_HOST_MULTIARCH}/dri/
 	mv debian/tmp/usr/lib/${DEB_HOST_MULTIARCH}/dri/*_drv_video.so \
 	   debian/mesa-va-drivers/usr/lib/${DEB_HOST_MULTIARCH}/dri/
+    endif
   endif
 
-	dh_install -a --fail-missing
+	dh_install -a
 
 	# Install bug control and script:
 	set -e; for p in $(allpkg); do \
@@ -214,16 +249,18 @@ override_dh_install:
 		install -m 755 debian/local/script  debian/$$p/usr/share/bug/$$p; \
 	done
 
+override_dh_missing:
+	dh_missing --fail-missing
+
 override_dh_makeshlibs:
 	dh_makeshlibs -a -- -c4
 
 %:
-	dh $@ --with quilt,autoreconf \
-		--parallel \
-		--builddirectory=build/
+	dh $@ --with quilt \
+		--builddirectory=build/ \
+		--buildsystem=meson
 
 # For maintainer use only, generate a tarball:
-gentarball: SOURCE=mesa
-gentarball: UV=$(shell dpkg-parsechangelog|awk '/^Version:/ {print $$2}'|sed 's/-.*$$//')
 gentarball:
-	git archive --format=tar upstream-experimental --prefix=$(SOURCE)-$(UV)/ | gzip -9 > ../$(SOURCE)_$(UV).orig.tar.gz
+	git archive --format=tar upstream-experimental --prefix=$(DEB_SOURCE)-$(DEB_VERSION_UPSTREAM)/ \
+		| gzip -9 > ../$(DEB_SOURCE)_$(DEB_VERSION_UPSTREAM).orig.tar.gz
