--- a/git-mesa/suite/bullseye/debian/rules
+++ b/git-mesa/suite/bullseye/debian/rules
@@ -77,8 +77,8 @@ else
 
 	# etnaviv, kmsro, tegra, vc4 and v3d kernel support are only available on armhf and arm64
 	ifneq (,$(filter $(DEB_HOST_ARCH), armhf arm64))
-		GALLIUM_DRIVERS += etnaviv kmsro lima panfrost tegra vc4 v3d
-		VULKAN_DRIVERS += broadcom freedreno
+		GALLIUM_DRIVERS += etnaviv kmsro lima panfrost tegra vc4 v3d imagination
+		VULKAN_DRIVERS += broadcom freedreno imagination-experimental
 	endif
 
 	ifneq (,$(filter $(DEB_HOST_ARCH), amd64 i386 x32))
@@ -160,6 +160,7 @@ confflags += \
 	-Dgallium-omx=disabled \
 	-Db_ndebug=true \
 	-Dbuild-tests=true \
+	-Dimagination-srv=true \
 	$(confflags_DIRECT_RENDERING) \
 	$(confflags_GBM) \
 	$(confflags_DRI3) \
