--- a/git-mesa/suite/bullseye/debian/rules
+++ b/git-mesa/suite/bullseye/debian/rules
@@ -77,7 +77,7 @@ else
 
 	# etnaviv, kmsro, tegra, vc4 and v3d kernel support are only available on armhf and arm64
 	ifneq (,$(filter $(DEB_HOST_ARCH), armhf arm64))
-		GALLIUM_DRIVERS += etnaviv kmsro lima panfrost tegra vc4 v3d imagination
+		GALLIUM_DRIVERS += etnaviv kmsro lima panfrost tegra vc4 v3d
 		VULKAN_DRIVERS += broadcom freedreno imagination-experimental
 	endif
 
