--- a/git-mesa/suite/bullseye/debian/rules
+++ b/git-mesa/suite/bullseye/debian/rules
@@ -160,6 +160,7 @@ confflags += \
 	-Dgallium-omx=disabled \
 	-Db_ndebug=true \
 	-Dbuild-tests=true \
+	-Dtools=drm-shim,etnaviv,freedreno,glsl,intel,nir,nouveau,lima,panfrost,imagination \
 	-Dimagination-srv=true \
 	$(confflags_DIRECT_RENDERING) \
 	$(confflags_GBM) \
