--- a/bb-u-boot-am335x-evm-beta/suite/buster/debian/control
+++ b/bb-u-boot-am335x-evm-beta/suite/buster/debian/control
@@ -16,5 +16,5 @@ Package: bb-u-boot-am335x-evm-beta
 Architecture: armhf
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: beagleboard.org u-boot for am335x_evm
- beagleboard.org u-boot for am335x_evm MLO/u-boot.img
+ beagleboard.org u-boot for am335x_evm MLO/u-boot-dtb.img
 
