--- a/bb-u-boot-am335x-evm-beta/suite/buster/debian/control
+++ b/bb-u-boot-am335x-evm-beta/suite/buster/debian/control
@@ -2,13 +2,14 @@ Source: bb-u-boot-am335x-evm-beta
 Section: misc
 Priority: extra
 Maintainer: Robert Nelson <robertcnelson@gmail.com>
-Build-Depends:  debhelper (>= 9),
-		bc,
-		bison,
-		ca-certificates,
-		flex,
-		git,
-		libssl-dev,
+Build-Depends:
+ debhelper (>= 9)
+ , bc,
+ , bison
+ , ca-certificates
+ , flex
+ , git
+ , libssl-dev
 Standards-Version: 4.5.1
 Homepage: https://github.com/beagleboard/u-boot
 
