--- a/bb-u-boot-am335x-evm-debian-11-ubuntu-2004/suite/bullseye/debian/control
+++ b/bb-u-boot-am335x-evm-debian-11-ubuntu-2004/suite/bullseye/debian/control
@@ -9,6 +9,7 @@ Build-Depends:
  , ca-certificates
  , flex
  , git
+ , libssl-dev
 Standards-Version: 4.5.1
 Homepage: https://github.com/beagleboard/u-boot
 
@@ -16,5 +17,5 @@ Package: bb-u-boot-am335x-evm
 Architecture: armhf
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: beagleboard.org u-boot for am335x_evm
- beagleboard.org u-boot for am335x_evm MLO/u-boot.img
+ beagleboard.org u-boot for am335x_evm MLO/u-boot-dtb.img
 
