--- a/bb-u-boot-am335x-evm-debian-11-ubuntu-2004/suite/focal/debian/control
+++ b/bb-u-boot-am335x-evm-debian-11-ubuntu-2004/suite/focal/debian/control
@@ -2,13 +2,14 @@ Source: bb-u-boot-am335x-evm
 Section: misc
 Priority: extra
 Maintainer: Robert Nelson <robertcnelson@gmail.com>
-Build-Depends:  debhelper (>= 9),
-		bc,
-		bison,
-		ca-certificates,
-		flex,
-		git,
-		libssl-dev,
+Build-Depends:
+ debhelper (>= 9)
+ , bc,
+ , bison
+ , ca-certificates
+ , flex
+ , git
+ , libssl-dev,
 Standards-Version: 4.5.1
 Homepage: https://github.com/beagleboard/u-boot
 
@@ -16,5 +17,5 @@ Package: bb-u-boot-am335x-evm
 Architecture: armhf
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: beagleboard.org u-boot for am335x_evm
- beagleboard.org u-boot for am335x_evm MLO/u-boot.img
+ beagleboard.org u-boot for am335x_evm MLO/u-boot-dtb.img
 
