bb-u-boot-am335x-evm (2022.04.20220407.1)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-u-boot-am335x-evm-debian-11-ubuntu-2004/suite/focal/debian/control
+++ b/bb-u-boot-am335x-evm-debian-11-ubuntu-2004/suite/focal/debian/control
@@ -9,9 +9,9 @@ Build-Depends:
  , ca-certificates
  , flex
  , git
- , libssl-dev,
+ , libssl-dev
 Standards-Version: 4.5.1
-Homepage: https://github.com/beagleboard/u-boot
+Homepage: https://git.beagleboard.org/beagleboard/u-boot.git
 
 Package: bb-u-boot-am335x-evm
 Architecture: armhf
