--- a/bbb.io-kernel/suite/buster/debian/control
+++ b/bbb.io-kernel/suite/buster/debian/control
@@ -24,7 +24,7 @@ Pre-Depends:
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-4.19.94-ti-r73,
+Recommends: libpruio-modules-4.19.94-ti-r73
 Description: BeagleBoard.org 4.19-ti
  This metapackage will install linux-image-4.19-ti in Debian.
 
@@ -66,7 +66,7 @@ Pre-Depends:
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-4.19.94-ti-rt-r73,
+Recommends: libpruio-modules-4.19.94-ti-rt-r73
 Description: BeagleBoard.org 4.19-ti-rt
  This metapackage will install linux-image-4.19-ti-rt in Debian.
 
@@ -108,7 +108,7 @@ Pre-Depends:
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.4.106-ti-r41,
+Recommends: libpruio-modules-5.4.106-ti-r41
 Description: BeagleBoard.org 5.4-ti
  This metapackage will install linux-image-5.4-ti in Debian.
 
@@ -150,7 +150,7 @@ Pre-Depends:
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.4.106-ti-rt-r41,
+Recommends: libpruio-modules-5.4.106-ti-rt-r41
 Description: BeagleBoard.org 5.4-ti-rt
  This metapackage will install linux-image-5.4-ti-rt in Debian.
 
@@ -192,7 +192,7 @@ Pre-Depends:
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.10.109-ti-r42,
+Recommends: libpruio-modules-5.10.109-ti-r42
 Description: BeagleBoard.org 5.10-ti
  This metapackage will install linux-image-5.10-ti in Debian.
 
@@ -235,7 +235,7 @@ Pre-Depends:
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.10.109-ti-rt-r42,
+Recommends: libpruio-modules-5.10.109-ti-rt-r42
 Description: BeagleBoard.org 5.10-ti-rt
  This metapackage will install linux-image-5.10-ti-rt in Debian.
 
@@ -275,7 +275,7 @@ Section: metapackages
 Architecture: all
 Pre-Depends: linux-image-4.19.232-bone75,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-4.19.232-bone75,
+Recommends: libpruio-modules-4.19.232-bone75
 Description: BeagleBoard.org 4.19-bone for am335x
  This metapackage will install linux-image-4.19-bone for am335x in Debian.
 
@@ -284,7 +284,7 @@ Section: metapackages
 Architecture: all
 Pre-Depends: linux-image-5.4.182-bone64,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.4.182-bone64,
+Recommends: libpruio-modules-5.4.182-bone64
 Description: BeagleBoard.org 5.4-bone for am335x
  This metapackage will install linux-image-5.4-bone for am335x in Debian.
 
@@ -293,7 +293,7 @@ Section: metapackages
 Architecture: all
 Pre-Depends: linux-image-5.10.109-bone63,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.10.109-bone63,
+Recommends: libpruio-modules-5.10.109-bone63
 Description: BeagleBoard.org 5.10-bone for am335x
  This metapackage will install linux-image-5.10-bone for am335x in Debian.
 
@@ -302,7 +302,7 @@ Section: metapackages
 Architecture: all
 Pre-Depends: linux-image-5.14.21-bone25,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.14.21-bone25,
+Recommends: libpruio-modules-5.14.21-bone25
 Description: BeagleBoard.org 5.14-bone for am335x
  This metapackage will install linux-image-5.14-bone for am335x in Debian.
 
@@ -311,34 +311,43 @@ Section: metapackages
 Architecture: all
 Pre-Depends: linux-image-5.15.32-bone23,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.15.32-bone23,
+Recommends: libpruio-modules-5.15.32-bone23
 Description: BeagleBoard.org 5.15-bone for am335x
  This metapackage will install linux-image-5.15-bone for am335x in Debian.
 
 Package: bbb.io-kernel-5.16-bone
 Section: metapackages
 Architecture: all
-Pre-Depends: linux-image-5.16.15-bone17,
+Pre-Depends: linux-image-5.16.20-bone18,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.16.15-bone17,
+Recommends: libpruio-modules-5.16.20-bone18
 Description: BeagleBoard.org 5.16-bone for am335x
  This metapackage will install linux-image-5.16-bone for am335x in Debian.
 
 Package: bbb.io-kernel-5.17-bone
 Section: metapackages
 Architecture: all
-Pre-Depends: linux-image-5.17.0-bone8,
+Pre-Depends: linux-image-5.17.3-bone9,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.17.0-bone8,
+Recommends: libpruio-modules-5.17.3-bone9
 Description: BeagleBoard.org 5.17-bone for am335x
  This metapackage will install linux-image-5.17-bone for am335x in Debian.
+
+Package: bbb.io-kernel-5.18-bone
+Section: metapackages
+Architecture: all
+Pre-Depends: linux-image-5.18.0-rc3-bone2,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.18.0-rc3-bone2
+Description: BeagleBoard.org 5.18-bone for am335x
+ This metapackage will install linux-image-5.18-bone for am335x in Debian.
 
 Package: bbb.io-kernel-4.19-bone-rt
 Section: metapackages
 Architecture: all
 Pre-Depends: linux-image-4.19.232-bone-rt-r75,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-4.19.232-bone-rt-r75,
+Recommends: libpruio-modules-4.19.232-bone-rt-r75
 Description: BeagleBoard.org 4.19-bone-rt for am335x
  This metapackage will install linux-image-4.19-bone-rt for am335x in Debian.
 
@@ -347,7 +356,7 @@ Section: metapackages
 Architecture: all
 Pre-Depends: linux-image-5.4.182-bone-rt-r64,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.4.182-bone-rt-r64,
+Recommends: libpruio-modules-5.4.182-bone-rt-r64
 Description: BeagleBoard.org 5.4-bone-rt for am335x
  This metapackage will install linux-image-5.4-bone-rt for am335x in Debian.
 
@@ -356,7 +365,7 @@ Section: metapackages
 Architecture: all
 Pre-Depends: linux-image-5.10.109-bone-rt-r63,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.10.109-bone-rt-r63,
+Recommends: libpruio-modules-5.10.109-bone-rt-r63
 Description: BeagleBoard.org 5.10-bone-rt for am335x
  This metapackage will install linux-image-5.10-bone-rt for am335x in Debian.
 
@@ -365,7 +374,7 @@ Section: metapackages
 Architecture: all
 Pre-Depends: linux-image-5.15.32-bone-rt-r23,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.15.32-bone-rt-r23,
+Recommends: libpruio-modules-5.15.32-bone-rt-r23
 Description: BeagleBoard.org 5.15-bone-rt for am335x
  This metapackage will install linux-image-5.15-bone-rt for am335x in Debian.
 
@@ -374,7 +383,7 @@ Section: metapackages
 Architecture: all
 Pre-Depends: linux-image-4.19.232-armv7-x75,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-4.19.232-armv7-x75,
+Recommends: libpruio-modules-4.19.232-armv7-x75
 Description: BeagleBoard.org 4.19-armv7 for armv7
  This metapackage will install linux-image-4.19-armv7 for armv7 in Debian.
 
@@ -383,7 +392,7 @@ Section: metapackages
 Architecture: all
 Pre-Depends: linux-image-5.4.182-armv7-x64,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.4.182-armv7-x64,
+Recommends: libpruio-modules-5.4.182-armv7-x64
 Description: BeagleBoard.org 5.4-armv7 for armv7
  This metapackage will install linux-image-5.4-armv7 for armv7 in Debian.
 
@@ -392,7 +401,7 @@ Section: metapackages
 Architecture: all
 Pre-Depends: linux-image-5.10.109-armv7-x63,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.10.109-armv7-x63,
+Recommends: libpruio-modules-5.10.109-armv7-x63
 Description: BeagleBoard.org 5.10-armv7 for armv7
  This metapackage will install linux-image-5.10-armv7 for armv7 in Debian.
 
@@ -401,7 +410,7 @@ Section: metapackages
 Architecture: all
 Pre-Depends: linux-image-5.15.32-armv7-x23,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.15.32-armv7-x23,
+Recommends: libpruio-modules-5.15.32-armv7-x23
 Description: BeagleBoard.org 5.15-armv7 for armv7
  This metapackage will install linux-image-5.15-armv7 for armv7 in Debian.
 
@@ -410,7 +419,7 @@ Section: metapackages
 Architecture: all
 Pre-Depends: linux-image-4.19.232-armv7-rt-x75,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-4.19.232-armv7-rt-x75,
+Recommends: libpruio-modules-4.19.232-armv7-rt-x75
 Description: BeagleBoard.org 4.19-armv7-rt for armv7
  This metapackage will install linux-image-4.19-armv7-rt for armv7 in Debian.
 
@@ -419,7 +428,7 @@ Section: metapackages
 Architecture: all
 Pre-Depends: linux-image-5.4.182-armv7-rt-x64,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.4.182-armv7-rt-x64,
+Recommends: libpruio-modules-5.4.182-armv7-rt-x64
 Description: BeagleBoard.org 5.4-armv7-rt for armv7
  This metapackage will install linux-image-5.4-armv7-rt for armv7 in Debian.
 
@@ -428,7 +437,7 @@ Section: metapackages
 Architecture: all
 Pre-Depends: linux-image-5.10.109-armv7-rt-x63,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.10.109-armv7-rt-x63,
+Recommends: libpruio-modules-5.10.109-armv7-rt-x63
 Description: BeagleBoard.org 5.10-armv7-rt for armv7
  This metapackage will install linux-image-5.10-armv7-rt for armv7 in Debian.
 
@@ -437,7 +446,7 @@ Section: metapackages
 Architecture: all
 Pre-Depends: linux-image-5.15.32-armv7-rt-x23,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.15.32-armv7-rt-x23,
+Recommends: libpruio-modules-5.15.32-armv7-rt-x23
 Description: BeagleBoard.org 5.15-armv7-rt for armv7
  This metapackage will install linux-image-5.15-armv7-rt for armv7 in Debian.
 
@@ -446,7 +455,7 @@ Section: metapackages
 Architecture: all
 Pre-Depends: linux-image-4.19.232-armv7-lpae-x75,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-4.19.232-armv7-lpae-x75,
+Recommends: libpruio-modules-4.19.232-armv7-lpae-x75
 Description: BeagleBoard.org 4.19-armv7-lpae for armv7-lpae
  This metapackage will install linux-image-4.19-armv7-lpae for armv7-lpae in Debian.
 
@@ -455,7 +464,7 @@ Section: metapackages
 Architecture: all
 Pre-Depends: linux-image-5.4.182-armv7-lpae-x64,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.4.182-armv7-lpae-x64,
+Recommends: libpruio-modules-5.4.182-armv7-lpae-x64
 Description: BeagleBoard.org 5.4-armv7-lpae for armv7-lpae
  This metapackage will install linux-image-5.4-armv7-lpae for armv7-lpae in Debian.
 
@@ -464,7 +473,7 @@ Section: metapackages
 Architecture: all
 Pre-Depends: linux-image-5.10.109-armv7-lpae-x63,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.10.109-armv7-lpae-x63,
+Recommends: libpruio-modules-5.10.109-armv7-lpae-x63
 Description: BeagleBoard.org 5.10-armv7-lpae for armv7-lpae
  This metapackage will install linux-image-5.10-armv7-lpae for armv7-lpae in Debian.
 
@@ -473,6 +482,6 @@ Section: metapackages
 Architecture: all
 Pre-Depends: linux-image-5.15.32-armv7-lpae-x23,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.15.32-armv7-lpae-x23,
+Recommends: libpruio-modules-5.15.32-armv7-lpae-x23
 Description: BeagleBoard.org 5.15-armv7-lpae for armv7-lpae
  This metapackage will install linux-image-5.15-armv7-lpae for armv7-lpae in Debian.
