--- a/bb-code-server-next/suite/bullseye/debian/control
+++ b/bb-code-server-next/suite/bullseye/debian/control
@@ -16,8 +16,8 @@ Pre-Depends:
 Depends:
  systemd (>= 230)
  , dphys-swapfile
-Breaks: npm, bb-code-server
-Conflicts: npm, bb-code-server
+Breaks: bb-code-server
+Conflicts: bb-code-server
 Description: code-server installer for beagleboard.org
  code-server is a tool to Run VS Code on any machine anywhere and access it in the browser.
 
