--- a/debian-11-mesa/suite/bullseye/debian/rules
+++ b/debian-11-mesa/suite/bullseye/debian/rules
@@ -13,7 +13,7 @@ DEB_HOST_ARCH_OS   ?= $(shell dpkg-architecture -qDEB_HOST_ARCH_OS)
 DEB_HOST_ARCH_CPU  ?= $(shell dpkg-architecture -qDEB_HOST_ARCH_CPU)
 
 # for finding the correct llvm-config when meson doesn't know about it yet
-export PATH:=/usr/lib/llvm-13/bin/:$(PATH)
+export PATH:=/usr/lib/llvm-14/bin/:$(PATH)
 
 export DEB_BUILD_MAINT_OPTIONS=optimize=-lto
 
@@ -75,9 +75,9 @@ else
 		GALLIUM_DRIVERS += freedreno
 	endif
 
-	# etnaviv, kmsro, tegra, vc4 and v3d kernel support are only available on armhf and arm64
+	# etnaviv, tegra, vc4 and v3d kernel support are only available on armhf and arm64
 	ifneq (,$(filter $(DEB_HOST_ARCH), armhf arm64))
-		GALLIUM_DRIVERS += etnaviv kmsro lima panfrost tegra vc4 v3d
+		GALLIUM_DRIVERS += etnaviv lima panfrost tegra vc4 v3d
 		VULKAN_DRIVERS += broadcom freedreno
 	endif
 
