gcc-pru (12.1.0-0rcnee0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/gcc-pru/suite/bullseye/debian/rules
+++ b/gcc-pru/suite/bullseye/debian/rules
@@ -3,6 +3,8 @@
 # Based on the gcc-avr package rules.
 # GNU copyright 1997 to 1999 by Joey Hess.
 
+DEB_BUILD_OPTIONS=noautodbgsym
+
 TARGET=pru
 TARGET_ARCH=pru
 PACKAGE=gcc-pru
