--- a/bb-beagle-config/suite/buster/debian/control
+++ b/bb-beagle-config/suite/buster/debian/control
@@ -2,15 +2,18 @@ Source: bb-beagle-config
 Section: misc
 Priority: extra
 Maintainer: Robert Nelson <robertcnelson@gmail.com>
-Build-Depends:  debhelper (>= 9),
-		ca-certificates,
-		cmake,
-		git,
+Build-Depends: 
+ debhelper (>= 9)
+ , ca-certificates
+ , cmake
+ , git
 Standards-Version: 3.9.8
-Homepage: https://github.com/SAtacker/beagle-config
+Homepage: https://github.com/SAtacker/bb-config
 
 Package: bb-beagle-config
 Architecture: armhf
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: beagleboard.org beagle-config
- beagleboard.org beagle-config for beagleboard devices
+Depends:
+ ${shlibs:Depends}
+ , ${misc:Depends}
+Description: beagleboard.org bb-config
+ beagleboard.org bb-config for beagleboard devices
