--- a/bb-beagle-config/suite/focal/debian/rules
+++ b/bb-beagle-config/suite/focal/debian/rules
@@ -8,8 +8,8 @@ override_dh_strip:
 	# Just disable for now...
 
 override_dh_auto_configure:
-	git clone https://github.com/SAtacker/beagle-config --depth=1
-	mkdir -p ./beagle-config/build ; cd ./beagle-config/build ; cmake .. ; make
+	git clone https://github.com/SAtacker/bb-config --depth=1
+	mkdir -p ./bb-config/build ; cd ./bb-config/build ; cmake .. ; make
 
 %:
 	dh $@
