--- a/bb-customizations/suite/bullseye/debian/control
+++ b/bb-customizations/suite/bullseye/debian/control
@@ -11,5 +11,6 @@ Architecture: armhf
 Depends:
  ${shlibs:Depends}
  , ${misc:Depends}
+ , udev
 Description: beagleboard.org customizations
  beagleboard.org customizations
