--- a/bb-customizations/suite/buster/debian/control
+++ b/bb-customizations/suite/buster/debian/control
@@ -8,6 +8,9 @@ Standards-Version: 3.9.6
 
 Package: bb-customizations
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends:
+ ${shlibs:Depends}
+ , ${misc:Depends}
+ , udev
 Description: beagleboard.org customizations
  beagleboard.org customizations
