--- a/bb-customizations/suite/bullseye/debian/control
+++ b/bb-customizations/suite/bullseye/debian/control
@@ -11,6 +11,7 @@ Architecture: armhf
 Depends:
  ${shlibs:Depends}
  , ${misc:Depends}
+ , systemd (>= 230)
  , udev
 Description: beagleboard.org customizations
  beagleboard.org customizations
