--- a/bb-customizations/suite/buster/debian/control
+++ b/bb-customizations/suite/buster/debian/control
@@ -4,13 +4,14 @@ Priority: extra
 Maintainer: Robert Nelson <robertcnelson@gmail.com>
 Build-Depends:
  debhelper (>= 9)
-Standards-Version: 3.9.6
+Standards-Version: 4.5.1
 
 Package: bb-customizations
-Architecture: all
+Architecture: armhf
 Depends:
  ${shlibs:Depends}
  , ${misc:Depends}
+ , systemd (>= 230)
  , udev
 Description: beagleboard.org customizations
  beagleboard.org customizations
