--- a/bbb.io-kernel/suite/buster/debian/control
+++ b/bbb.io-kernel/suite/buster/debian/control
@@ -196,11 +196,11 @@ Package: bbb.io-kernel-5.10-ti
 Section: metapackages
 Architecture: all
 Pre-Depends:
- linux-image-5.10.120-ti-r46
+ linux-image-5.10.120-ti-r47
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.10.120-ti-r46
+Recommends: libpruio-modules-5.10.120-ti-r47
 Description: BeagleBoard.org 5.10-ti
  This metapackage will install linux-image-5.10-ti in Debian.
 
@@ -208,16 +208,17 @@ Package: bbb.io-kernel-5.10-ti-am335x
 Section: metapackages
 Architecture: all
 Pre-Depends:
- linux-image-5.10.120-ti-r46
+ linux-image-5.10.120-ti-r47
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
 Recommends:
- libpruio-modules-5.10.120-ti-r46
- , ti-sgx-ti335x-modules-5.10.120-ti-r46
- , qcacld-2.0-modules-5.10.120-ti-r46
- , rtl8723bu-modules-5.10.120-ti-r46
- , rtl8821cu-modules-5.10.120-ti-r46
+ libpruio-modules-5.10.120-ti-r47
+ , ti-sgx-ti335x-modules-5.10.120-ti-r47
+ , rtl8723bu-modules-5.10.120-ti-r47
+ , rtl8723du-modules-5.10.120-ti-r47
+ , rtl8821cu-modules-5.10.120-ti-r47
+ , qcacld-2.0-modules-5.10.120-ti-r47
  , bb-u-boot-am335x-evm
 Description: BeagleBoard.org 5.10-ti for am335x
  This metapackage will install linux-image-5.10-ti for am335x in Debian.
@@ -226,13 +227,13 @@ Package: bbb.io-kernel-5.10-ti-am57xx
 Section: metapackages
 Architecture: all
 Pre-Depends:
- linux-image-5.10.120-ti-r46
+ linux-image-5.10.120-ti-r47
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
 Recommends:
- libpruio-modules-5.10.120-ti-r46
- , ti-sgx-jacinto6evm-modules-5.10.120-ti-r46
+ libpruio-modules-5.10.120-ti-r47
+ , ti-sgx-jacinto6evm-modules-5.10.120-ti-r47
  , bb-u-boot-am57xx-evm
 Description: BeagleBoard.org 5.10-ti for am57xx
  This metapackage will install linux-image-5.10-ti for am57xx in Debian.
@@ -241,11 +242,11 @@ Package: bbb.io-kernel-5.10-ti-rt
 Section: metapackages
 Architecture: all
 Pre-Depends:
- linux-image-5.10.120-ti-rt-r46
+ linux-image-5.10.120-ti-rt-r47
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.10.120-ti-rt-r46
+Recommends: libpruio-modules-5.10.120-ti-rt-r47
 Description: BeagleBoard.org 5.10-ti-rt
  This metapackage will install linux-image-5.10-ti-rt in Debian.
 
@@ -253,16 +254,17 @@ Package: bbb.io-kernel-5.10-ti-rt-am335x
 Section: metapackages
 Architecture: all
 Pre-Depends:
- linux-image-5.10.120-ti-rt-r46
+ linux-image-5.10.120-ti-rt-r47
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
 Recommends:
- libpruio-modules-5.10.120-ti-rt-r46
- , ti-sgx-ti335x-modules-5.10.120-ti-rt-r46
- , qcacld-2.0-modules-5.10.120-ti-rt-r46
- , rtl8723bu-modules-5.10.120-ti-rt-r46
- , rtl8821cu-modules-5.10.120-ti-rt-r46
+ libpruio-modules-5.10.120-ti-rt-r47
+ , ti-sgx-ti335x-modules-5.10.120-ti-rt-r47
+ , rtl8723bu-modules-5.10.120-ti-rt-r47
+ , rtl8723du-modules-5.10.120-ti-rt-r47
+ , rtl8821cu-modules-5.10.120-ti-rt-r47
+ , qcacld-2.0-modules-5.10.120-ti-rt-r47
  , bb-u-boot-am335x-evm
 Description: BeagleBoard.org 5.10-ti-rt for am335x
  This metapackage will install linux-image-5.10-ti-rt for am335x in Debian.
@@ -271,13 +273,13 @@ Package: bbb.io-kernel-5.10-ti-rt-am57xx
 Section: metapackages
 Architecture: all
 Pre-Depends:
- linux-image-5.10.120-ti-rt-r46
+ linux-image-5.10.120-ti-rt-r47
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
 Recommends:
- libpruio-modules-5.10.120-ti-rt-r46
- , ti-sgx-jacinto6evm-modules-5.10.120-ti-rt-r46
+ libpruio-modules-5.10.120-ti-rt-r47
+ , ti-sgx-jacinto6evm-modules-5.10.120-ti-rt-r47
  , bb-u-boot-am57xx-evm
 Description: BeagleBoard.org 5.10-ti-rt for am57xx
  This metapackage will install linux-image-5.10-ti-rt for am57xx in Debian.
@@ -357,9 +359,9 @@ Description: BeagleBoard.org 5.18-bone for am335x
 Package: bbb.io-kernel-5.19-bone
 Section: metapackages
 Architecture: all
-Pre-Depends: linux-image-5.19.0-rc6-bone1,
+Pre-Depends: linux-image-5.19.0-rc6-bone2,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.19.0-rc6-bone1
+Recommends: libpruio-modules-5.19.0-rc6-bone2
 Description: BeagleBoard.org 5.19-bone for am335x
  This metapackage will install linux-image-5.19-bone for am335x in Debian.
 
