--- a/git-libusbgx/suite/bullseye/debian/control
+++ b/git-libusbgx/suite/bullseye/debian/control
@@ -2,14 +2,17 @@ Source: libusbgx
 Section: misc
 Priority: extra
 Maintainer: Robert Nelson <robertcnelson@gmail.com>
-Build-Depends:  debhelper (>= 9),
-		dh-autoreconf,
-		libconfig-dev,
+Build-Depends:
+ debhelper (>= 9)
+ , dh-autoreconf
+ , libconfig-dev
 Standards-Version: 4.5.1
 Homepage: https://github.com/linux-usb-gadgets/libusbgx
 
 Package: libusbgx
 Architecture: armhf
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends:
+ ${shlibs:Depends}
+ , ${misc:Depends}
 Description: beagleboard.org libusbgx
  beagleboard.org libusbgx for beagleboard devices
