dpkg (1.21.1ubuntu2.1rcnee1~jammy)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/ubuntu-2204-dpkg/suite/jammy/debian/rules
+++ b/ubuntu-2204-dpkg/suite/jammy/debian/rules
@@ -3,6 +3,8 @@
 # Copyright © 2004 Scott James Remnant <scott@netsplit.com>
 # Copyright © 2006-2012 Guillem Jover <guillem@debian.org>
 
+DEB_BUILD_OPTIONS=noautodbgsym
+
 WFLAGS := \
 	-Wall -Wextra \
 	-Wno-missing-field-initializers \
