seasocks (1.4.4-git20220530.4: cmake, where are you installing...
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bela-seasocks/suite/bullseye/debian/rules
+++ b/bela-seasocks/suite/bullseye/debian/rules
@@ -22,7 +22,7 @@ override_dh_strip:
 	# Just disable for now...
 
 override_dh_auto_configure:
-	mkdir -p ./build ; cd ./build ; cmake .. -DDEFLATE_SUPPORT=OFF -DUNITTESTS=OFF -DSEASOCKS_SHARED=ON ; make -j${CORES} seasocks ; cmake -P cmake_install.cmake
+	mkdir -p ./build ; cd ./build ; cmake .. -DDEFLATE_SUPPORT=OFF -DUNITTESTS=OFF -DSEASOCKS_SHARED=ON ; make -j${CORES} seasocks ; cmake CMAKE_INSTALL_PREFIX=./tmp -P cmake_install.cmake ; cd ../ ; tree
 	
 %:
 	dh $@
