--- a/bela-seasocks/suite/bullseye/debian/control
+++ b/bela-seasocks/suite/bullseye/debian/control
@@ -6,6 +6,7 @@ Build-Depends:
  debhelper-compat (= 13)
  , cmake
  , python3-dev
+ , tree
 Standards-Version: 4.5.1
 Homepage: https://github.com/mattgodbolt/seasocks
 #Vcs-Browser: https://salsa.debian.org/debian/seasocks
