seasocks (1.4.4-git20220530.7): drop tree/debugg, add cmake as a recommendation
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bela-seasocks/suite/bullseye/debian/control
+++ b/bela-seasocks/suite/bullseye/debian/control
@@ -6,7 +6,6 @@ Build-Depends:
  debhelper-compat (= 13)
  , cmake
  , python3-dev
- , tree
 Standards-Version: 4.5.1
 Homepage: https://github.com/mattgodbolt/seasocks
 #Vcs-Browser: https://salsa.debian.org/debian/seasocks
@@ -18,5 +17,6 @@ Architecture: any
 Depends:
  ${shlibs:Depends}
  , ${misc:Depends}
+ , cmake
 Description: A tiny embeddable C++ HTTP and WebSocket server
  Seasocks - A tiny embeddable C++ HTTP and WebSocket server
