seasocks (1.4.4-git20220530.8): Section: unknown -> misc, lock arch to armhf
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bela-seasocks/suite/bullseye/debian/control
+++ b/bela-seasocks/suite/bullseye/debian/control
@@ -1,5 +1,5 @@
 Source: seasocks
-Section: unknown
+Section: misc
 Priority: optional
 Maintainer: Kurva Prashanth <krvprashanth@riseup.net>
 Build-Depends:
@@ -13,7 +13,7 @@ Homepage: https://github.com/mattgodbolt/seasocks
 Rules-Requires-Root: no
 
 Package: seasocks
-Architecture: any
+Architecture: armhf
 Depends:
  ${shlibs:Depends}
  , ${misc:Depends}
