bbb.io-kernel (1.20220720.1)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/focal/debian/control
+++ b/bbb.io-kernel/suite/focal/debian/control
@@ -9,7 +9,7 @@ Standards-Version: 4.5.0
 Rules-Requires-Root: no
 
 Package: bbb.io-kernel-tasks
-Architecture: all
+Architecture: armhf
 Depends:
  tasksel
  , ${misc:Depends}
@@ -18,7 +18,7 @@ Description: BeagleBoard.org Kernel Branches
 
 Package: bbb.io-kernel-4.19-ti
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends:
  linux-image-4.19.94-ti-r73
 Depends:
@@ -30,7 +30,7 @@ Description: BeagleBoard.org 4.19-ti
 
 Package: bbb.io-kernel-4.19-ti-am335x
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends:
  linux-image-4.19.94-ti-r73
 Depends:
@@ -47,7 +47,7 @@ Description: BeagleBoard.org 4.19-ti for am335x
 
 Package: bbb.io-kernel-4.19-ti-am57xx
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends:
  linux-image-4.19.94-ti-r73
 Depends:
@@ -62,7 +62,7 @@ Description: BeagleBoard.org 4.19-ti for am57xx
 
 Package: bbb.io-kernel-4.19-ti-rt
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends:
  linux-image-4.19.94-ti-rt-r73
 Depends:
@@ -74,7 +74,7 @@ Description: BeagleBoard.org 4.19-ti-rt
 
 Package: bbb.io-kernel-4.19-ti-rt-am335x
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends:
  linux-image-4.19.94-ti-rt-r73
 Depends:
@@ -91,7 +91,7 @@ Description: BeagleBoard.org 4.19-ti-rt for am335x
 
 Package: bbb.io-kernel-4.19-ti-rt-am57xx
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends:
  linux-image-4.19.94-ti-rt-r73
 Depends:
@@ -106,7 +106,7 @@ Description: BeagleBoard.org 4.19-ti-rt for am57xx
 
 Package: bbb.io-kernel-5.4-ti
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends:
  linux-image-5.4.106-ti-r41
 Depends:
@@ -118,7 +118,7 @@ Description: BeagleBoard.org 5.4-ti
 
 Package: bbb.io-kernel-5.4-ti-am335x
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends:
  linux-image-5.4.106-ti-r41
 Depends:
@@ -135,7 +135,7 @@ Description: BeagleBoard.org 5.4-ti for am335x
 
 Package: bbb.io-kernel-5.4-ti-am57xx
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends:
  linux-image-5.4.106-ti-r41
 Depends:
@@ -150,7 +150,7 @@ Description: BeagleBoard.org 5.4-ti for am57xx
 
 Package: bbb.io-kernel-5.4-ti-rt
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends:
  linux-image-5.4.106-ti-rt-r41
 Depends:
@@ -162,7 +162,7 @@ Description: BeagleBoard.org 5.4-ti-rt
 
 Package: bbb.io-kernel-5.4-ti-rt-am335x
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends:
  linux-image-5.4.106-ti-rt-r41
 Depends:
@@ -179,7 +179,7 @@ Description: BeagleBoard.org 5.4-ti-rt for am335x
 
 Package: bbb.io-kernel-5.4-ti-rt-am57xx
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends:
  linux-image-5.4.106-ti-rt-r41
 Depends:
@@ -194,7 +194,7 @@ Description: BeagleBoard.org 5.4-ti-rt for am57xx
 
 Package: bbb.io-kernel-5.10-ti
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends:
  linux-image-5.10.120-ti-r47
 Depends:
@@ -206,7 +206,7 @@ Description: BeagleBoard.org 5.10-ti
 
 Package: bbb.io-kernel-5.10-ti-am335x
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends:
  linux-image-5.10.120-ti-r47
 Depends:
@@ -225,7 +225,7 @@ Description: BeagleBoard.org 5.10-ti for am335x
 
 Package: bbb.io-kernel-5.10-ti-am57xx
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends:
  linux-image-5.10.120-ti-r47
 Depends:
@@ -240,7 +240,7 @@ Description: BeagleBoard.org 5.10-ti for am57xx
 
 Package: bbb.io-kernel-5.10-ti-rt
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends:
  linux-image-5.10.120-ti-rt-r47
 Depends:
@@ -252,7 +252,7 @@ Description: BeagleBoard.org 5.10-ti-rt
 
 Package: bbb.io-kernel-5.10-ti-rt-am335x
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends:
  linux-image-5.10.120-ti-rt-r47
 Depends:
@@ -271,7 +271,7 @@ Description: BeagleBoard.org 5.10-ti-rt for am335x
 
 Package: bbb.io-kernel-5.10-ti-rt-am57xx
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends:
  linux-image-5.10.120-ti-rt-r47
 Depends:
