--- a/bbb.io-kernel/suite/bullseye/debian/control
+++ b/bbb.io-kernel/suite/bullseye/debian/control
@@ -9,7 +9,7 @@ Standards-Version: 4.5.0
 Rules-Requires-Root: no
 
 Package: bbb.io-kernel-tasks
-Architecture: all
+Architecture: armhf
 Depends:
  tasksel
  , ${misc:Depends}
@@ -18,7 +18,7 @@ Description: BeagleBoard.org Kernel Branches
 
 Package: bbb.io-kernel-4.19-ti
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends:
  linux-image-4.19.94-ti-r73
 Depends:
@@ -30,7 +30,7 @@ Description: BeagleBoard.org 4.19-ti
 
 Package: bbb.io-kernel-4.19-ti-am335x
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends:
  linux-image-4.19.94-ti-r73
 Depends:
@@ -47,7 +47,7 @@ Description: BeagleBoard.org 4.19-ti for am335x
 
 Package: bbb.io-kernel-4.19-ti-am57xx
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends:
  linux-image-4.19.94-ti-r73
 Depends:
@@ -62,7 +62,7 @@ Description: BeagleBoard.org 4.19-ti for am57xx
 
 Package: bbb.io-kernel-4.19-ti-rt
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends:
  linux-image-4.19.94-ti-rt-r73
 Depends:
@@ -74,7 +74,7 @@ Description: BeagleBoard.org 4.19-ti-rt
 
 Package: bbb.io-kernel-4.19-ti-rt-am335x
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends:
  linux-image-4.19.94-ti-rt-r73
 Depends:
@@ -91,7 +91,7 @@ Description: BeagleBoard.org 4.19-ti-rt for am335x
 
 Package: bbb.io-kernel-4.19-ti-rt-am57xx
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends:
  linux-image-4.19.94-ti-rt-r73
 Depends:
@@ -106,7 +106,7 @@ Description: BeagleBoard.org 4.19-ti-rt for am57xx
 
 Package: bbb.io-kernel-5.4-ti
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends:
  linux-image-5.4.106-ti-r41
 Depends:
@@ -118,7 +118,7 @@ Description: BeagleBoard.org 5.4-ti
 
 Package: bbb.io-kernel-5.4-ti-am335x
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends:
  linux-image-5.4.106-ti-r41
 Depends:
@@ -135,7 +135,7 @@ Description: BeagleBoard.org 5.4-ti for am335x
 
 Package: bbb.io-kernel-5.4-ti-am57xx
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends:
  linux-image-5.4.106-ti-r41
 Depends:
@@ -150,7 +150,7 @@ Description: BeagleBoard.org 5.4-ti for am57xx
 
 Package: bbb.io-kernel-5.4-ti-rt
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends:
  linux-image-5.4.106-ti-rt-r41
 Depends:
@@ -162,7 +162,7 @@ Description: BeagleBoard.org 5.4-ti-rt
 
 Package: bbb.io-kernel-5.4-ti-rt-am335x
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends:
  linux-image-5.4.106-ti-rt-r41
 Depends:
@@ -179,7 +179,7 @@ Description: BeagleBoard.org 5.4-ti-rt for am335x
 
 Package: bbb.io-kernel-5.4-ti-rt-am57xx
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends:
  linux-image-5.4.106-ti-rt-r41
 Depends:
@@ -194,7 +194,7 @@ Description: BeagleBoard.org 5.4-ti-rt for am57xx
 
 Package: bbb.io-kernel-5.10-ti
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends:
  linux-image-5.10.120-ti-r47
 Depends:
@@ -206,7 +206,7 @@ Description: BeagleBoard.org 5.10-ti
 
 Package: bbb.io-kernel-5.10-ti-am335x
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends:
  linux-image-5.10.120-ti-r47
 Depends:
@@ -225,7 +225,7 @@ Description: BeagleBoard.org 5.10-ti for am335x
 
 Package: bbb.io-kernel-5.10-ti-am57xx
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends:
  linux-image-5.10.120-ti-r47
 Depends:
@@ -240,7 +240,7 @@ Description: BeagleBoard.org 5.10-ti for am57xx
 
 Package: bbb.io-kernel-5.10-ti-rt
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends:
  linux-image-5.10.120-ti-rt-r47
 Depends:
@@ -252,7 +252,7 @@ Description: BeagleBoard.org 5.10-ti-rt
 
 Package: bbb.io-kernel-5.10-ti-rt-am335x
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends:
  linux-image-5.10.120-ti-rt-r47
 Depends:
@@ -271,7 +271,7 @@ Description: BeagleBoard.org 5.10-ti-rt for am335x
 
 Package: bbb.io-kernel-5.10-ti-rt-am57xx
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends:
  linux-image-5.10.120-ti-rt-r47
 Depends:
@@ -286,7 +286,7 @@ Description: BeagleBoard.org 5.10-ti-rt for am57xx
 
 Package: bbb.io-kernel-4.19-bone
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends: linux-image-4.19.232-bone75,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-4.19.232-bone75
@@ -295,7 +295,7 @@ Description: BeagleBoard.org 4.19-bone for am335x
 
 Package: bbb.io-kernel-5.4-bone
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends: linux-image-5.4.182-bone64,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-5.4.182-bone64
@@ -304,7 +304,7 @@ Description: BeagleBoard.org 5.4-bone for am335x
 
 Package: bbb.io-kernel-5.10-bone
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends: linux-image-5.10.131-bone64,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-5.10.131-bone64
@@ -313,7 +313,7 @@ Description: BeagleBoard.org 5.10-bone for am335x
 
 Package: bbb.io-kernel-5.14-bone
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends: linux-image-5.14.21-bone25,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-5.14.21-bone25
@@ -322,7 +322,7 @@ Description: BeagleBoard.org 5.14-bone for am335x
 
 Package: bbb.io-kernel-5.15-bone
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends: linux-image-5.15.49-bone26,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-5.15.49-bone26
@@ -331,7 +331,7 @@ Description: BeagleBoard.org 5.15-bone for am335x
 
 Package: bbb.io-kernel-5.16-bone
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends: linux-image-5.16.20-bone21,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-5.16.20-bone21
@@ -340,7 +340,7 @@ Description: BeagleBoard.org 5.16-bone for am335x
 
 Package: bbb.io-kernel-5.17-bone
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends: linux-image-5.17.15-bone12,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-5.17.15-bone12
@@ -349,7 +349,7 @@ Description: BeagleBoard.org 5.17-bone for am335x
 
 Package: bbb.io-kernel-5.18-bone
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends: linux-image-5.18.12-bone8,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-5.18.12-bone8
@@ -358,7 +358,7 @@ Description: BeagleBoard.org 5.18-bone for am335x
 
 Package: bbb.io-kernel-5.19-bone
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends: linux-image-5.19.0-rc7-bone4,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-5.19.0-rc7-bone4
@@ -367,7 +367,7 @@ Description: BeagleBoard.org 5.19-bone for am335x
 
 Package: bbb.io-kernel-4.19-bone-rt
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends: linux-image-4.19.232-bone-rt-r75,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-4.19.232-bone-rt-r75
@@ -376,7 +376,7 @@ Description: BeagleBoard.org 4.19-bone-rt for am335x
 
 Package: bbb.io-kernel-5.4-bone-rt
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends: linux-image-5.4.182-bone-rt-r64,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-5.4.182-bone-rt-r64
@@ -385,7 +385,7 @@ Description: BeagleBoard.org 5.4-bone-rt for am335x
 
 Package: bbb.io-kernel-5.10-bone-rt
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends: linux-image-5.10.131-bone-rt-r64,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-5.10.131-bone-rt-r64
@@ -394,7 +394,7 @@ Description: BeagleBoard.org 5.10-bone-rt for am335x
 
 Package: bbb.io-kernel-5.15-bone-rt
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends: linux-image-5.15.49-bone-rt-r26,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-5.15.49-bone-rt-r26
@@ -403,7 +403,7 @@ Description: BeagleBoard.org 5.15-bone-rt for am335x
 
 Package: bbb.io-kernel-4.19-armv7
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends: linux-image-4.19.232-armv7-x75,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-4.19.232-armv7-x75
@@ -412,7 +412,7 @@ Description: BeagleBoard.org 4.19-armv7 for armv7
 
 Package: bbb.io-kernel-5.4-armv7
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends: linux-image-5.4.182-armv7-x64,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-5.4.182-armv7-x64
@@ -421,7 +421,7 @@ Description: BeagleBoard.org 5.4-armv7 for armv7
 
 Package: bbb.io-kernel-5.10-armv7
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends: linux-image-5.10.131-armv7-x64,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-5.10.131-armv7-x64
@@ -430,7 +430,7 @@ Description: BeagleBoard.org 5.10-armv7 for armv7
 
 Package: bbb.io-kernel-5.15-armv7
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends: linux-image-5.15.49-armv7-x26,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-5.15.49-armv7-x26
@@ -439,7 +439,7 @@ Description: BeagleBoard.org 5.15-armv7 for armv7
 
 Package: bbb.io-kernel-4.19-armv7-rt
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends: linux-image-4.19.232-armv7-rt-x75,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-4.19.232-armv7-rt-x75
@@ -448,7 +448,7 @@ Description: BeagleBoard.org 4.19-armv7-rt for armv7
 
 Package: bbb.io-kernel-5.4-armv7-rt
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends: linux-image-5.4.182-armv7-rt-x64,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-5.4.182-armv7-rt-x64
@@ -457,7 +457,7 @@ Description: BeagleBoard.org 5.4-armv7-rt for armv7
 
 Package: bbb.io-kernel-5.10-armv7-rt
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends: linux-image-5.10.131-armv7-rt-x64,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-5.10.131-armv7-rt-x64
@@ -466,7 +466,7 @@ Description: BeagleBoard.org 5.10-armv7-rt for armv7
 
 Package: bbb.io-kernel-5.15-armv7-rt
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends: linux-image-5.15.49-armv7-rt-x26,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-5.15.49-armv7-rt-x26
@@ -475,7 +475,7 @@ Description: BeagleBoard.org 5.15-armv7-rt for armv7
 
 Package: bbb.io-kernel-4.19-armv7-lpae
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends: linux-image-4.19.232-armv7-lpae-x75,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-4.19.232-armv7-lpae-x75
@@ -484,7 +484,7 @@ Description: BeagleBoard.org 4.19-armv7-lpae for armv7-lpae
 
 Package: bbb.io-kernel-5.4-armv7-lpae
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends: linux-image-5.4.182-armv7-lpae-x64,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-5.4.182-armv7-lpae-x64
@@ -493,7 +493,7 @@ Description: BeagleBoard.org 5.4-armv7-lpae for armv7-lpae
 
 Package: bbb.io-kernel-5.10-armv7-lpae
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends: linux-image-5.10.131-armv7-lpae-x64,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-5.10.131-armv7-lpae-x64
@@ -502,7 +502,7 @@ Description: BeagleBoard.org 5.10-armv7-lpae for armv7-lpae
 
 Package: bbb.io-kernel-5.15-armv7-lpae
 Section: metapackages
-Architecture: all
+Architecture: armhf
 Pre-Depends: linux-image-5.15.49-armv7-lpae-x26,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-5.15.49-armv7-lpae-x26
