bbb.io-kernel (1.20220726.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/jammy/debian/control
+++ b/bbb.io-kernel/suite/jammy/debian/control
@@ -107,3 +107,12 @@ Recommends:
  , bb-u-boot-am57xx-evm
 Description: BeagleBoard.org 5.10-ti-rt for am57xx
  This metapackage will install linux-image-5.10-ti-rt for am57xx in Debian.
+
+Package: bbb.io-kernel-5.19-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.19.0-rc8-bone5,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.19.0-rc8-bone5
+Description: BeagleBoard.org 5.19-bone for am335x
+ This metapackage will install linux-image-5.19-bone for am335x in Debian.
