bb-u-boot-am57xx-evm (2022.04.20220803.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-u-boot-am57xx-evm/suite/bullseye/debian/control
+++ b/bb-u-boot-am57xx-evm/suite/bullseye/debian/control
@@ -2,14 +2,16 @@ Source: bb-u-boot-am57xx-evm
 Section: misc
 Priority: extra
 Maintainer: Robert Nelson <robertcnelson@gmail.com>
-Build-Depends:  debhelper (>= 9),
-		bc,
-		bison,
-		ca-certificates,
-		flex,
-		git,
-Standards-Version: 3.9.8
-Homepage: https://github.com/beagleboard/u-boot
+Build-Depends:
+ debhelper (>= 10)
+ , bc,
+ , bison
+ , ca-certificates
+ , flex
+ , git
+ , libssl-dev
+Standards-Version: 4.5.1
+Homepage: https://git.beagleboard.org/beagleboard/u-boot.git
 
 Package: bb-u-boot-am57xx-evm
 Architecture: armhf
