bb-node-red-installer (3.0.1.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-node-red-installer-debian-11/suite/bullseye/debian/control
+++ b/bb-node-red-installer-debian-11/suite/bullseye/debian/control
@@ -4,8 +4,7 @@ Priority: extra
 Maintainer: Robert Nelson <robertcnelson@gmail.com>
 Build-Depends:
  debhelper (>= 10)
- , python
- , tree
+ , python3
 Standards-Version: 4.5.1
 Homepage: https://github.com/rcn-ee/repos
 
