bb-node-red-installer (3.0.2.0-)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-node-red-installer-debian-11/suite/bullseye/debian/rules
+++ b/bb-node-red-installer-debian-11/suite/bullseye/debian/rules
@@ -17,8 +17,12 @@ npm_bin=$(project_dir)/bin/npm
 
 nodejs_version=v14.20.0
 
-node_red_version=3.0.1
+node_red_version=3.0.2
 node_red_dashboard_version=3.1.7
+
+node_red_contrib_gpio=0.51.0
+johnny_five_version=2.1.0
+beaglebone_io_version=4.1.0
 
 override_dh_auto_configure:
 	mkdir -p $(project_dir)/
@@ -58,6 +62,30 @@ override_dh_auto_configure:
 	echo "Real Install: node-red-dashboard@$(node_red_dashboard_version)"
 	TERM=dumb $(node_bin) $(npm_bin) install -g $(tmp_dir)/node-red-dashboard/*.tgz --unsafe-perm=true --loglevel=error --prefix $(project_dir) --no-save
 	rm -rf $(tmp_dir)/node-red-dashboard/
+	echo "*************************************************************"
+	echo "node-red-contrib-gpio"
+	echo "Fake Install: node-red-contrib-gpio@$(node_red_contrib_gpio_version)"
+	TERM=dumb $(node_bin) $(npm_bin) install -g --unsafe-perm=true --loglevel=error --prefix /tmp node-red-contrib-gpio@$(node_red_contrib_gpio_version)
+	cd $(tmp_dir)/node-red-contrib-gpio/ ; TERM=dumb $(node_bin) $(npm_bin) pack
+	echo "Real Install: node-red-contrib-gpio@$(node_red_contrib_gpio_version)"
+	TERM=dumb $(node_bin) $(npm_bin) install -g $(tmp_dir)/node-red-contrib-gpio/*.tgz --unsafe-perm=true --loglevel=error --prefix $(project_dir) --no-save
+	rm -rf $(tmp_dir)/node-red-contrib-gpio/
+	echo "*************************************************************"
+	echo "johnny-five"
+	echo "Fake Install: johnny-five@$(johnny_five_version)"
+	TERM=dumb $(node_bin) $(npm_bin) install -g --unsafe-perm=true --loglevel=error --prefix /tmp johnny-five@$(johnny_five_version)
+	cd $(tmp_dir)/johnny-five/ ; TERM=dumb $(node_bin) $(npm_bin) pack
+	echo "Real Install: johnny-five@$(johnny_five_version)"
+	TERM=dumb $(node_bin) $(npm_bin) install -g $(tmp_dir)/johnny-five/*.tgz --unsafe-perm=true --loglevel=error --prefix $(project_dir) --no-save
+	rm -rf $(tmp_dir)/johnny-five/
+	echo "*************************************************************"
+	echo "beaglebone-io"
+	echo "Fake Install: beaglebone-io@$(beaglebone_io_version)"
+	TERM=dumb $(node_bin) $(npm_bin) install -g --unsafe-perm=true --loglevel=error --prefix /tmp beaglebone-io@$(beaglebone_io_version)
+	cd $(tmp_dir)/beaglebone-io/ ; TERM=dumb $(node_bin) $(npm_bin) pack
+	echo "Real Install: beaglebone-io@$(beaglebone_io_version)"
+	TERM=dumb $(node_bin) $(npm_bin) install -g $(tmp_dir)/beaglebone-io/*.tgz --unsafe-perm=true --loglevel=error --prefix $(project_dir) --no-save
+	rm -rf $(tmp_dir)/beaglebone-io/
 	echo "*************************************************************"
 	echo "move $(project_dir)/ to ./tmp$(project_dir)/"
 	mkdir -p ./tmp$(project_dir)/
